--- a/index.html
+++ b/index.html
@@ -266,10 +266,10 @@ will get used to populate a list of the category list for the shop by category b
 -->
 <div id='shopByCategoriesList' class='displayNone' title='Shop by Category'>
 	<ul class='listStyleNone fourColList'>
-		<li onClick="showContent('category',{'navcat':'.weekly_special.best_sellers'});">Best Sellers</li>
-		<li onClick="showContent('category',{'navcat':'.weekly_special.gift_ideas'});">Gift Ideas</li>
-		<li onClick="showContent('category',{'navcat':'.weekly_special.new'});">New Arrivals</li>
-		<li onClick="showContent('category',{'navcat':'.weekly_special.clearance'});">Clearance</li>
+		<li onClick="showContent('category',{'navcat':'.weekly_special.best_sellers', templateID : 'categoryTemplateSubcatNoImg'});">Best Sellers</li>
+		<li onClick="showContent('category',{'navcat':'.weekly_special.gift_ideas', templateID : 'categoryTemplateSubcatNoImg'});">Gift Ideas</li>
+		<li onClick="showContent('category',{'navcat':'.weekly_special.new', templateID : 'categoryTemplateSubcatNoImg'});">New Arrivals</li>
+		<li onClick="showContent('category',{'navcat':'.weekly_special.clearance', templateID : 'categoryTemplateSubcatNoImg'});">Clearance</li>
 	</ul>
 	<hr />
 	<ul class='listStyleNone fourColList' id='tier1categories' ></ul>
@@ -383,7 +383,27 @@ don't modify the 'data-templateid' unless you are changing template names and up
 
 </div>
 
+<div id='categoryTemplateSubcatNoImg' class='loadingBG categoryTemplate'>
 
+	<ul class='breadcrumb clearfix noPadOrMargin fluidList' data-bind='var: category(id); format:breadcrumb; extension:store_navcats; loadsTemplate: breadcrumbTemplate;'></ul>
+
+	<!--
+	<img data-bind="var: category(%page.banner1); format: imageURL;" height="250" width="750"/>
+	-->
+	<div class='contentContainer marginBottom'>
+
+		<h2 data-bind="var: category(pretty); format:catText; extension: myRIA; editor:text; pretext:Shop ;" class='greyGradient'></h2>
+
+	<p data-bind="var: category(%page.description); format:wiki; wikiFormats:myRIA; editor: textarea;"></p>
+	
+	<ul data-bind="var: category(@subcategoryDetail); format: categoryList; extension: store_navcats; loadsTemplate: categoryListTemplateNoImg; detail:max;" class='listStyleNone clearfix noPadOrMargin fourColList'></ul><!-- outputs a list of subcategories -->
+	</div>
+	<ul data-bind="var: category(@products); format: productList; withInventory: 1; withVariations: 1; editor: finder; extension: store_prodlist; loadsTemplate: productListTemplate; withReviews:1; items_per_page: 25;" class='listStyleNone fluidList clearfix noPadOrMargin productList'></ul><!-- outputs the product list -->
+
+	<p data-bind="var: category(%page.description2); format:wiki; wikiFormats:myRIA; editor: textarea;"></p>
+
+
+</div>
 
 
 
@@ -401,8 +421,16 @@ don't modify the 'data-templateid' unless you are changing template names and up
 	</div>
 </li>
 
+<li id='categoryListTemplateNoImg' class="categoryListTemplateNoImg">
+	<div onClick="showContent('category',{'navcat':$(this).parent().attr('data-catsafeid')});" class='pointer'>
+		<div class='catName white2LGray alignCenter'>
+			<span data-bind='var: category(pretty); format:catText; extension: myRIA;;'></span>
+			<span data-bind='var: category(@products); format: numProduct; extension:store_navcats; pretext: (; posttext:) ;'></span>
+		</div>
+	</div>
+</li>
 
-<li id='categoryListTemplateRootCats' onClick="showContent('category',{'navcat':$(this).attr('data-catsafeid')});" class='pointer'>
+<li id='categoryListTemplateRootCats' onClick="showContent('category',{'navcat':$(this).attr('data-catsafeid'), templateID : 'categoryTemplateSubcatNoImg'});" class='pointer'>
 	<img src='blank.gif' class='catThumb' data-bind='var: category(%meta.CAT_THUMB); format:imageURL;' width='45' height='45' />
 	<span data-bind='var: category(pretty); format:catText; extension: myRIA;;'></span>
 	<span data-bind='var: category(@products); format: numProduct; extension:store_navcats; pretext: (; posttext:) ;'></span>
