--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@ var app = {vars:{
 	"release":"20130227093500",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"_clientid":"zmvc",
 	"baseURL":"",
-//	"httpsURL":"https://secure.gkworld.com/s=www.gkworld.com/",
-//	"httpURL":"http://www.gkworld.com/"
-	"httpsURL":"https://secure.gkworld.com/s=app.9c0a9a.snap.zoovy.net/",
-	"httpURL":"http://app.9c0a9a.snap.zoovy.net/"
+	"httpsURL":"https://secure.gkworld.com/s=www.gkworld.com/",
+	"httpURL":"http://www.gkworld.com/"
 	},u:{},rq:[]};
 
 //set base url so images, css, js, etc all load from appropriate location once deployed.
